fix hero image overflowing borders

--- a/src/components/Hero/hero.module.scss
+++ b/src/components/Hero/hero.module.scss
@@ -119,7 +119,6 @@
 
     @include breakpoint(md) {
       justify-self: center;
-      transform: scale(1.1);
     }
   }
 }
